test/Chisel/src/failing/DanglingOutput.lf
target Chisel

import Counter from "../lib/Counter.lf"
main reactor {
    cnt = new Counter()
}